--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,10 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@prisma/client": "^5.2.0",
-    "fastify": "^4.21.0"
+    "fastify": "^4.21.0",
+    "httpie": "^1.1.2",
+    "zod": "^3.22.2"
   }
 }
