--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fastify/cors": "^8.3.0",
     "@prisma/client": "^5.2.0",
+    "axios": "^1.5.0",
     "fastify": "^4.21.0",
     "httpie": "^1.1.2",
     "zod": "^3.22.2"
