--- a/server/package.json
+++ b/server/package.json
@@ -10,15 +10,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.7.0",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/node": "^20.10.0",
     "prisma": "^5.2.0",
     "tsx": "^3.12.7",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^5.8.0-dev.37",
     "axios": "^1.5.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "fastify": "^4.21.0",
     "httpie": "^1.1.2",
     "zod": "^3.22.2"
